--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -324,7 +324,7 @@
 				<string>WhateverGreen.kext</string>
 			</dict>
 		</array>
-		<key>Delete</key>
+		<key>Block</key>
 		<array>
 			<dict>
 				<key>Comment</key>
@@ -627,6 +627,8 @@
 				<string>-v keepsyms=1 debug=0x100 alcid=5</string>
 				<key>prev-lang:kbd</key>
 				<string>en-US:0</string>
+				<key>csr-active-config</key>
+				<data>AAAAAA==</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
@@ -736,8 +738,6 @@
 			<key>VolumeAmplifier</key>
 			<integer>0</integer>
 		</dict>
-		<key>csr-active-config</key>
-		<data>AAAAAA==</data>
 		<key>ConnectDrivers</key>
 		<true/>
 		<key>Drivers</key>
